WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263362
Fix break with LAYER_BASED_SVG_ENGINE disabled after
269492@main
https://bugs.webkit.org/show_bug.cgi?id=263362
Summary
Fix break with LAYER_BASED_SVG_ENGINE disabled after 269492@main
Yousuke Kimoto
Reported
2023-10-18 22:25:29 PDT
When LAYER_BASED_SVG_ENGINE is disabled, RenderSVGShape is used in SVGRenderSupport.cpp and the class is defined LAYER_BASED_SVG_ENGINE enabled. Also an inline error occurs: Source\WebCore\rendering\svg\legacy\LegacyRenderSVGShape.h(102,17): error : inline function 'WebCore::LegacyRenderSVGShape::hasNonScalingStroke' is not defined [-Werror,-Wundefined-inline] To solve the build break, it needs to add some conditional codes and include LegacyRenderSVGShapeInlines.h in SVGRenderSupport.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Yousuke Kimoto
Comment 1
2023-10-18 22:56:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19272
EWS
Comment 2
2023-10-19 02:56:07 PDT
Committed
269511@main
(b2f96217de84): <
https://commits.webkit.org/269511@main
> Reviewed commits have been landed. Closing PR #19272 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-10-19 02:57:18 PDT
<
rdar://problem/117195926
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug