Fix break with LAYER_BASED_SVG_ENGINE disabled after 269492@main https://bugs.webkit.org/show_bug.cgi?id=263362

Reviewed by Ross Kirsling.

When LAYER_BASED_SVG_ENGINE is disabled, RenderSVGShape is used in
SVGRenderSupport::calculateApproximateStrokeBoundingBox() and the class
is defined with LAYER_BASED_SVG_ENGINE enabled. Also an inline error
occurs in SVGRenderSupport.cpp.

To fix the build break, it needs to add a conditional code for
LAYER_BASED_SVG_ENGINE and add include a header file to refer RenderSVGShape.

* Source/WebCore/rendering/svg/SVGRenderSupport.cpp: Add include LegacyRenderSVGShapeInlines.h
(WebCore::SVGRenderSupport::calculateApproximateStrokeBoundingBox): Add a condtional macro for LAYER_BASED_SVG_ENGINE

Canonical link: https://commits.webkit.org/269511@main